--- a/app_down_bon.html
+++ b/app_down_bon.html
@@ -1,30 +1,24 @@
 ﻿<html>
+<head>
+        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+
+  <title>OTA Ad-Hoc 설치 페이지</title>
+        <style>
+                li {margin: 10px;}
+        </style>
+</head>
 <body>
+<p>
+이 페이지는 비공개 앱 OTA 테스트(Closed OTA Test) 페이지 입니다.
+<font color="red">IOS 의 경우 디바이스 권한의 없으면 OTA를 설치할 수 없습니다.  </font>
 <br/>
-<br/>
-<center>
-<h1>Bon Membership</h1>
-</center>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<center>
-<a href="itms-services://?action=download-manifest&url=http://NamkiAn.github.io/BonMembership.plist">Download BonMembership iOS</a>
-</center>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<center>
-<a href="http://NamkiAn.github.io/BonMembership-release.apk">Download BonMembership Android</a>
-</center>
-<br/>
-<br/>
-</body>
+</p>
+  <ul>
+        <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/3w50k8yyemrlnjp/BonMembership.plist">bonmembership iOS download</a></li>
+  </ul>
+<ul>
+        <li><a href="https://dl.dropboxusercontent.com/s/jdbziwdvziyfuts/BonMembership-release.apk">bonmembership AND download</a></li>
+  </ul>
+</body> 
 </html>
