--- a/index.html
+++ b/index.html
@@ -14,14 +14,25 @@
 <font color="red">IOS 의 경우 디바이스 권한의 없으면 OTA를 설치할 수 없습니다.  </font>
 <br/>
 </p>
-  <ul>
-        <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/e020yh6wwqi63qy/BonMembership.plist">bonmembership iOS download</a></li>
+<ul>
+        <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/e020yh6wwqi63qy/BonMembership.plist">BonPoint 1.0.1 iOS download</a></li>
   </ul>
 <br/>
 <br/>
 <br/>
 <ul>
-        <li><a href="https://dl.dropboxusercontent.com/s/85adnodlsqgieo4/BonMembership-release.apk">bonmembership AND download</a></li>
-  </ul>
+        <li><a href="https://dl.dropboxusercontent.com/s/as3lkyh2uutx24p/BonMembership-release.apk">BonPoint 1.0.1 AND download</a></li>
+</ul>
+<br/>
+<br/>
+<br/>
+<ul>
+        <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/e020yh6wwqi63qy/BonMembership.plist">BonPoint 1.0.0 iOS download</a></li>
+<br/>
+<br/>
+<br/>
+<ul>
+        <li><a href="https://dl.dropboxusercontent.com/s/922ci32vct8y4y0/BonMembership-release.apk">BonPoint 1.0.0 AND download</a></li>
+</ul>
 </body> 
 </html>
