Change link name
Change link name

--- a/app_down_bon.html
+++ b/app_down_bon.html
@@ -18,13 +18,13 @@
 
 
 <ul>
-        <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/l3sb25az0za1os1/BonMembership.plist">BonPoint 1.0.1 iOS download</a></li>
+        <li><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/l3sb25az0za1os1/BonMembership.plist">BonPoint iOS download</a></li>
   </ul>
 <br/>
 <br/>
 <br/>
 <ul>
-        <li><a href="https://dl.dropboxusercontent.com/s/mtaq341e1ectnl2/BonPoint-release.apk">BonPoint 1.0.1 AND download</a></li>
+        <li><a href="https://dl.dropboxusercontent.com/s/mtaq341e1ectnl2/BonPoint-release.apk">BonPoint AND download</a></li>
 </ul>
 
 
